<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.update.UpdateFragment">

    <TextView
        android:id="@+id/medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/medication_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/updateMedicationName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/updateMedicationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/medication_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateMedicationDosage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/medication_dosage"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateMedicationName" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate_update" />

    <TextView
        android:id="@+id/editTime_update"
        android:layout_width="194dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toEndOf="@+id/timeTV"
        app:layout_constraintTop_toBottomOf="@+id/updateFrequency" />

    <TextView
        android:id="@+id/editDate_update"
        android:layout_width="198dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textSize="70px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toEndOf="@+id/dateTV"
        app:layout_constraintTop_toBottomOf="@+id/editTime_update" />

    <EditText
        android:id="@+id/updateFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="77dp"
        android:ems="10"
        android:hint="@string/frequency"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/updateRepeatCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder" />


    <CheckBox
        android:id="@+id/updateRepeatCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat"
        app:layout_constraintBottom_toBottomOf="@+id/updateFrequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="Time"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editDate_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateFrequency"
        app:layout_constraintVertical_bias="0.37"
        tools:text="Time" />

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="Date"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/updateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTV"
        app:layout_constraintVertical_bias="0.319"
        tools:text="Date" />

    <TextView
        android:id="@+id/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reminder_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateMedicationDosage" />

</androidx.constraintlayout.widget.ConstraintLayout>